# marketing_video_agent_factory

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  test_flow.py
agents/: __init__.py  animation_agent.py  campaign_agent.py  caption_agent.py  root_agent.py  video_agent.py  video_optimization_agent.py  video_production_agent.py  video_script_agent.py  video_strategy_agent.py
app/: __init__.py  agent.py  fast_api_app.py
config/: __init__.py  models.py  settings.py
memory/: __init__.py  state.py  store.py
prompts/: __init__.py  animation_agent.py  campaign_agent.py  caption_agent.py  root_agent.py  video_agent.py  video_optimization_agent.py  video_production_agent.py  video_script_agent.py  video_strategy_agent.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tools/: __init__.py  animation.py  calendar.py  content.py  image_utils.py  marketing_research.py  response_formatter.py  script_gen.py  video_gen.py  web_scraper.py  web_search.py
